flaskr/flaskr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskr-service
spec:
  ports:
  - name: flaskr-service
    port: 5000
    targetPort: 5000
  selector:
    app: flaskr
